# C_T2

./: .gitignore
Adidas/: .gitignore  Adidas-module-design.pptx  Assignment - Adidas.docx  Makefile  bb.txt  cc.txt  output.txt
Adidas/product/: channel_main.c  decode_main.c  encode_main.c  main.c
Adidas/shared/: channel.c  channel.h  decode.c  decode.h  encode.c  encode.h  io.c  io.h  parity.c  parity.h
Adidas/test/: channel_test.c  decode_test.c  encode_test.c  main.c
AnimalShelter/: .gitignore  2-Assignment - AnimalShelter.docx.url  CMakeLists.txt  Makefile
AnimalShelter/Unity/: unity_test_module.c
AnimalShelter/product/: main.c  terminal_io.c  terminal_io.h
AnimalShelter/shared/: administration.c  administration.h  file_element.c  file_element.h
AnimalShelter/test/: administration_test.c  file_element_test.c  main.c
BikeComputer/: 1-Assignment - bike computer - Makefile and Headerfiles.docx  Makefile  bike_math.c  bike_measure.c  bike_store.c  main.c  ~$Assignment - bike computer - Makefile and Headerfiles.docx
BikeComputer/include/: bike_math.h  bike_measure.h  bike_store.h
BikeComputer/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
ExtraAssignments/Skater/: Makefile
ExtraAssignments/Skater/product/: main.c  terminal_io.c
ExtraAssignments/Skater/shared/: skater.c  skater.h
ExtraAssignments/Skater/test/: main.c  skater_test.c
Watch/: .gitignore
Watch/shared/: watch_registers.c
Watch/test/: watch_registers_test.c
